--- a/Starter_Code 3/starter_code/WeatherPyAnalysis.ipynb
+++ b/Starter_Code 3/starter_code/WeatherPyAnalysis.ipynb
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1783,7 +1783,7 @@
     "# YOUR CODE HERE\n",
     "\n",
     "# Save the figure\n",
-    "#plt.savefig(\"../output_data/Fig1.png\")\n",
+    "plt.savefig(\"../output_data/Fig1.png\")\n",
     "\n",
     "# Show plot\n",
     "plt.show()"
